1. 完成后端数据库植入连接用户模型 2. 完成前端登录页以及解析用户信息token

--- a/ScadeSuiteWeb.Client/Layout/MainLayout.razor
+++ b/ScadeSuiteWeb.Client/Layout/MainLayout.razor
@@ -1,8 +1,14 @@
-﻿@inherits LayoutComponentBase
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@inherits LayoutComponentBase
+@inject AuthenticationStateProvider auth
+@inject NavigationManager Nm
+
 <div class="page">
-    <div class="sidebar">
+
+
+@*     <div class="sidebar">
         <NavMenu />
-    </div>
+    </div> *@
 
     <main>
 @*        
@@ -21,3 +27,36 @@
 <FluentDialogProvider />
 <FluentTooltipProvider />
 <FluentMessageBarProvider />
+
+
+@code{
+
+	protected override async Task OnInitializedAsync()
+	{
+		await base.OnInitializedAsync();
+
+		var user = await auth.GetAuthenticationStateAsync();
+
+
+		var ca = user.User.Claims;
+		Console.WriteLine(ca);
+		if (user.User.Identity is null || !user.User.Identity.IsAuthenticated)
+		{
+			Nm.NavigateTo("/login");
+		}
+		else
+		{
+			// var ca = user.User.Claims;
+			// Console.WriteLine(ca);
+			/*	
+			if (ca != null)
+			{
+				authService.LoadToken(ca);
+			}
+			Name = authService.GetNickName();
+		*/
+		}
+
+
+	}
+}
