--- a/ScadeSuiteWeb.Client/Pages/Home.razor
+++ b/ScadeSuiteWeb.Client/Pages/Home.razor
@@ -24,7 +24,7 @@
             <FluentButton
                 Appearance="Appearance.Accent"
                 OnClick="@StartLoadingAsync">
-                登录
+                Login
             </FluentButton>
         </div>
 
