--- a/ScadeSuiteWeb.Client/Pages/Weather.razor
+++ b/ScadeSuiteWeb.Client/Pages/Weather.razor
@@ -2,56 +2,33 @@
 @inject HttpClient Http
 
 <PageTitle>Weather</PageTitle>
-
-<h1>Weather</h1>
-
-<p>This component demonstrates fetching data from the server.</p>
-
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+@{
+#pragma warning disable FluentMultiSplitter
 }
 
-@code {
-    private WeatherForecast[]? forecasts;
+<FluentMultiSplitter OnResize="@OnResizeHandler" Height="150px" Style="border: 1px dashed var(--accent-fill-rest);">
+    <FluentMultiSplitterPane Size="20%" Min="50px" Max="70%">
+        Left Menu
+    </FluentMultiSplitterPane>
+    <FluentMultiSplitterPane Size="50%">
+        <FluentMultiSplitter OnResize="@OnResizeHandler" Orientation="Orientation.Vertical">
+            <FluentMultiSplitterPane Collapsible="true">
+                Main Content
+            </FluentMultiSplitterPane>
+            <FluentMultiSplitterPane Collapsible="true">
+                Console log
+            </FluentMultiSplitterPane>
+        </FluentMultiSplitter>
+    </FluentMultiSplitterPane>
+    <FluentMultiSplitterPane Size="30%">
+        Properties
+    </FluentMultiSplitterPane>
+</FluentMultiSplitter>
 
-    protected override async Task OnInitializedAsync()
+@code
+{
+    void OnResizeHandler(FluentMultiSplitterResizeEventArgs e)
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
-    }
-
-    public class WeatherForecast
-    {
-        public DateOnly Date { get; set; }
-
-        public int TemperatureC { get; set; }
-
-        public string? Summary { get; set; }
-
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+        // DemoLogger.WriteLine($"Pane {e.PaneIndex} Resize (New size {e.NewSize})");
     }
 }
