--- a/ScadeSuiteWeb.Client/Pages/Login.razor
+++ b/ScadeSuiteWeb.Client/Pages/Login.razor
@@ -85,15 +85,11 @@
 
 
 @code {
-    
+
     public DesignThemeModes Mode { get; set; }
     public OfficeColor? OfficeColor { get; set; }
-    private LoginViewModel _loginModel = new LoginViewModel()
-    {
-        UserName = "admin",
-        Password = "adminadmin"
-    };
-    
+    private LoginViewModel _loginModel = new LoginViewModel();
+
     // get the current user's information and sent it to the server for authentication
     private async Task StartLogin(MouseEventArgs arg)
     {
